Tue Apr 26 23:42:30 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): should not raise exceptions even if
	  the user input is wrong.  only reports the error and continue process.

Tue Apr 26 23:35:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): convert -e script to the encoding
	  given by a command line option on Windows.  assume it is the
	  expected encoding.  [ruby-dev:49461] [Bug #11900]

Tue Apr 26 21:11:02 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_lshift): {Fixnum,Bignum}#<< is unified into
	  Integer.

	* bignum.c (rb_big_lshift): Don't define Bignum#<<.

	* internal.h (rb_big_lshift): Declared.

Tue Apr 26 20:59:40 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_rshift): {Fixnum,Bignum}#>> is unified into
	  Integer.

	* bignum.c (rb_big_rshift): Don't define Bignum#>>.

	* internal.h (rb_big_rshift): Declared.

Tue Apr 26 20:46:16 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_size): {Fixnum,Bignum}#size is unified into Integer.

	* bignum.c (rb_big_size_m): Don't define Bignum#size.

	* internal.h (rb_big_size_m): Declared.

Tue Apr 26 20:09:08 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_bit_length): {Fixnum,Bignum}#bit_length is
	  unified into Integer.

	* bignum.c (rb_big_bit_length): Don't define Bignum#bit_length.

	* internal.h (rb_big_bit_length): Declared.

Tue Apr 26 19:56:16 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_abs): Integer#{abs,magnitude} moved from
	  Fixnum and Bignum.

	* bignum.c (rb_big_abs): Don't define Bignum#{abs,magnitude}.

	* internal.h (rb_big_abs): Declared.

Mon Apr 25 14:39:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/rbconfig/sizeof/extconf.rb: just check the existence of each
	  types, to reduce configuration time, especially cross-compiling.

	* template/sizes.c.tmpl: calculate sizes of checked types at
	  compilation time.

Mon Apr 25 11:27:27 2016  Marcus Stollsteimer  <sto.mar@web.de>
