@@ -1,3 +1,9 @@
+Wed Apr 27 14:29:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* error.c (ruby_only_for_internal_use): raise fatal error when
+	  deprecated function only for internal use is called, not just a
+	  warning.
+
 Tue Apr 26 23:42:30 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* tool/redmine-backporter.rb (rel): should not raise exceptions even if
